# AI-engineering-team

./: README.md  pyproject.toml
output/: about.html  design_plan.md  features.html  index.html
src/my_website_builder/: crew.py  main.py
src/my_website_builder/config/: engineering_manager_agent.yaml  engineering_manager_task.yaml  web_developer_agents.yaml  web_developer_tasks.yaml
