[project]
name = "my_website_builder"
version = "0.1.0"
description = "my_website_builder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "gradio>=6.5.1",
]

[project.scripts]
my_website_builder = "my_website_builder.main:run"
run_crew = "my_website_builder.main:run"
train = "my_website_builder.main:train"
replay = "my_website_builder.main:replay"
test = "my_website_builder.main:test"
run_with_trigger = "my_website_builder.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
